# verycross

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  build.rs  verycross.rc
.claude/: settings.local.json
.github/workflows/: ci.yml
keyboard/: Cargo.toml  Readme.md
keyboard/src/: lib.rs  listener.rs
src/: config.rs  interface.rs  main.rs  settings.rs  tray.rs
