[package]
name = "verycross"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros", "sync"] }
single-instance = "0.1.1"
winit = "0.26.1"
winapi = "0.3.9"
winit-blit = { git = "https://github.com/rust-windowing/winit-blit" }
png = "0.17.5"
tray-item = "0.7.0"
winky = { path = './winky/' }

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
windres = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true