[package]
name = "verycross"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt-multi-thread", "time", "macros", "sync"] }
single-instance = "0.1.1"
winit = "0.26.1"
winapi = "0.3.9"
winit-blit = { git = "https://github.com/rust-windowing/winit-blit" }
png = "0.17.5"
tray-item = "0.7.0"

# Hotkey support
winky = { path = './winky/' }

# Config window
fltk = { version = "^1.3", features = ["fltk-bundled"] }

# Settings
lazy_static = "1.4.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
directories = "4.0.1"

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
windres = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
incremental = false
strip = true