[package]
name = "verycross"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "time", "macros", "sync"] }
single-instance = "0.3.3"
winit = "0.26.1"
winapi = "0.3.9"
winit-blit = { git = "https://github.com/rust-windowing/winit-blit" }
png = "0.17.5"
tray-item = "0.10.0"

# Hotkey support
winky = { path = './winky/' }

# Settings
lazy_static = "1.4.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
directories = "5.0.1"

[build-dependencies]
[target.'cfg(windows)'.build-dependencies]
windres = "*"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
incremental = false
strip = true